2003-06-12  Hector E. Gomez Morales <hgomez_36@flashmail.com>
	* en/Gtk/Window.xml: first draft.

2003-06-12  John Luke  <jluke@cfl.rr.com>
	* en/Gtk/Image.xml: add parameter and returns references, Methods
	* en/Gtk/Window.xml: add parameter and returns references
	* en/Gtk/TreeView.xml: add RulesHint
	* en/Gtk/Stock.xml: add returns references
	* en/Gtk/Plug.xml: add first draft

2003-06-06  John Luke  <jluke@cfl.rr.com>
	* en/GConf/*.xml: add
	* en/GConf.PropertyEditors/*.xml: add

2003-06-03  John Luke  <jluke@cfl.rr.com>
	* README: update instructions to compile and install docs

2003-06-01  Lee Mallabone  <gnome@fonicmonkey.net>

	* en/*Sharp/bool*.xml: Remove more internal signal classes.
	* en/*Sharp/*Native.xml: Remove non-public signal classes.

2003-05-30  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/ToggleButton.xml: Fix typo, bulleted list.
	* en/Gtk/Progress.xml: Fix typo.
	* en/Gtk/Tooltips.xml: Fix method signature.
	* en/Gtk/Button.xml: Add some info.
	* en/Gtk/MessageDialog.xml: Add first draft
	* en/Gtk/InputDialog: Add first draft

2003-05-29  Lee Mallabone  <gnome@fonicmonkey.net>

	* en/*Sharp/*.xml: Remove the internal void*.xml signal docs.

2003-05-21  Lee Mallabone  <gnome@fonicmonkey.net>

	* en/Gtk/*.xml: Remove some private bits of Gtk assembly.
	* en/Gtk/Button.xml: Result of running the updater.
	* en/Gtk/SizeGroup*.xml: First draft of docs for GtkSizeGroup.

2003-05-20  Hector E. Gomez Morales  <hgomez_36@flashmail.com>

	* en/Gtk/Menu.xml:add first draft.

2003-05-19  John Luke  <jluke@cfl.rr.com>
	* en/Gtk/SeparatorMenuItem.xml:
	* en/Gtk/Item.xml: Add first drafts.

2003-05-15  Martin Willemoes Hansen <mwh@sysrq.dk>
	* en/Gnome.xml: Added
	* en/GLib.xml: Added

2003-05-14  John Luke  <jluke@cfl.rr.com>
	* en/Gtk/Progress.xml:
	* en/Gtk/ProgressBar.xml: Add first drafts, without examples.
	* en/Gtk/EventBox.xml:
	* en/Gtk/Fixed.xml:
	* en/Gtk/ToggleButton.xml:
	* en/Gtk/Tooltips.xml:  Add myself as maintainer
