@@ -1,5 +1,5 @@
 <Type Name="ImageType" FullName="Gtk.ImageType">
-  <TypeSignature Language="C#" Value="public sealed struct ImageType;" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public sealed struct ImageType;" Maintainer="John Luke" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,13 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Describes the image data representation used by a <see cref="T:Gtk.Image"/>.</summary>
+    <remarks>
+      Describes the image data representation used by a <see cref="T:Gtk.Image"/>.
+      If you want to get the image from the widget, you can only get the currently-stored representation.
+      e.g. if the <see cref="P:Gtk.Image.StorageType"/> returns <see cref="F:Gtk.ImageType.Pixbuf"/>, then you can get <see cref="P:Gtk.Image.Pixbuf"/> but not <see cref="P:Gtk.Image.Stock"/>.
+      For empty images, you can request any storage type (from any of the "get" properties), but they will all return <see langword="null"/> values.
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +39,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>There is no image displayed by the <see cref="T:Gtk.Widget"/>.</summary>
+        <remarks>There is no image displayed by the <see cref="T:Gtk.Widget"/>.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Pixmap">
@@ -46,8 +51,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.Widget"/> contains a <see cref="T:Gdk.Pixmap"/>.</summary>
+        <remarks>The <see cref="T:Gtk.Widget"/> contains a <see cref="T:Gdk.Pixmap"/>.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Image">
@@ -58,8 +63,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.Widget"/> contains a <see cref="T:Gdk.Image"/>.</summary>
+        <remarks>The <see cref="T:Gtk.Widget"/> contains a <see cref="T:Gdk.Image"/>.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Pixbuf">
@@ -70,8 +75,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.Widget"/> contains a <see cref="T:Gdk.Pixbuf"/>.</summary>
+        <remarks>The <see cref="T:Gtk.Widget"/> contains a <see cref="T:Gdk.Pixbuf"/>.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Stock">
@@ -82,8 +87,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.Widget"/> contains a stock icon name.</summary>
+        <remarks>The <see cref="T:Gtk.Widget"/> contains a stock icon name.</remarks>
       </Docs>
     </Member>
     <Member MemberName="IconSet">
@@ -94,8 +99,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.Widget"/> contains a <see cref="T:Gtk.IconSet"/>.</summary>
+        <remarks>The <see cref="T:Gtk.Widget"/> contains a <see cref="T:Gtk.IconSet"/>.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Animation">
@@ -106,8 +111,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.Widget"/> contains a <see cref="T:Gdk.PixbufAnimation"/>.</summary>
+        <remarks>The <see cref="T:Gtk.Widget"/> contains a <see cref="T:Gdk.PixbufAnimation"/>.</remarks>
       </Docs>
     </Member>
     <Member MemberName="value__">
