@@ -1,5 +1,5 @@
 <Type Name="ProgressBarOrientation" FullName="Gtk.ProgressBarOrientation">
-  <TypeSignature Language="C#" Value="public sealed struct ProgressBarOrientation;" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public sealed struct ProgressBarOrientation;" Maintainer="John Luke" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>An enumeration representing possible orientations and growth directions for the visible <see cref="T:Gtk.ProgressBar"/>.</summary>
+    <remarks>An enumeration representing possible orientations and growth directions for the visible <see cref="T:Gtk.ProgressBar"/>.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +34,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>A horizontal <see cref="T:Gtk.ProgressBar"/> growing from left to right.</summary>
+        <remarks>A horizontal <see cref="T:Gtk.ProgressBar"/> growing from left to right.</remarks>
       </Docs>
     </Member>
     <Member MemberName="RightToLeft">
@@ -46,8 +46,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>A horizontal <see cref="T:Gtk.ProgressBar"/> growing from right to left.</summary>
+        <remarks>A horizontal <see cref="T:Gtk.ProgressBar"/> growing from right to left.</remarks>
       </Docs>
     </Member>
     <Member MemberName="BottomToTop">
@@ -58,8 +58,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>A vertical <see cref="T:Gtk.ProgressBar"/> growing from bottom to top.</summary>
+        <remarks>A vertical <see cref="T:Gtk.ProgressBar"/> growing from bottom to top.</remarks>
       </Docs>
     </Member>
     <Member MemberName="TopToBottom">
@@ -70,8 +70,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>A vertical <see cref="T:Gtk.ProgressBar"/> growing from top to bottom.</summary>
+        <remarks>A vertical <see cref="T:Gtk.ProgressBar"/> growing from top to bottom.</remarks>
       </Docs>
     </Member>
     <Member MemberName="value__">
