@@ -1,5 +1,5 @@
 <Type Name="ProgressBarStyle" FullName="Gtk.ProgressBarStyle">
-  <TypeSignature Language="C#" Value="public sealed struct ProgressBarStyle;" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public sealed struct ProgressBarStyle;" Maintainer="John Luke" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>An enumeration representing the styles for drawing the <see cref="T:Gtk.ProgressBar"/>.</summary>
+    <remarks>An enumeration representing the styles for drawing the <see cref="T:Gtk.ProgressBar"/>.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +34,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.ProgressBar"/> grows in a smooth, continuous manner.</summary>
+        <remarks>The <see cref="T:Gtk.ProgressBar"/> grows in a smooth, continuous manner.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Discrete">
@@ -46,8 +46,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The <see cref="T:Gtk.ProgressBar"/> grows in discrete, visible blocks.</summary>
+        <remarks>The <see cref="T:Gtk.ProgressBar"/> grows in discrete, visible blocks.</remarks>
       </Docs>
     </Member>
     <Member MemberName="value__">
