@@ -1,3 +1,8 @@
+2003-06-13  John Luke  <jluke@cfl.rr.com>
+    * en/Gtk/ProgressBarStyle.xml
+    * en/Gtk/ProgressBarOrientation.xml
+    * en/Gtk/ImageType.xml: add first drafts
+
 2003-06-12  Hector E. Gomez Morales <hgomez_36@flashmail.com>
 	* en/Gtk/Window.xml: first draft.
 
